<resources>
    <string name="app_name">DanamonTest</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="register">Register</string>
    <string name="register_success">Registration Successful</string>
    <string name="websocket_message">Websocket Message Here!\n</string>
    <string name="user_logged">User Logged In</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation_title">Logout Confirmation</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="delete_confirmation_title">Are you sure you want to delete this user?</string>
    <string name="delete_confirmation_message">Input your password to delete this user</string>
    <string name="delete">Delete</string>
    <string name="edit_user">Edit User</string>
    <string name="update">Update</string>
    <string name="update_success">Update Successful</string>

    <string-array name="role_options">
        <item>Admin</item>
        <item>Normal</item>
    </string-array>

</resources>